--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>7A</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/harshakurra123/Smile-Maker/main/images/favicon.ico" />
+    <title>MANOJ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -15,7 +14,7 @@
 <body>
 
 
-    <div class="card text-center">
+    <div class=" card text-center">
         <div class="card-header">
             <ul class="nav nav-pills card-header-pills">
                 <li class="nav-item">
@@ -30,20 +29,7 @@
 
             </ul>
         </div>
-        {% for i in data %}
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5" style="justify-content: center;">
-            <div class="col mb-4">
-                <div class="card">
-                    <!-- <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                        <h5 class="card-title">{{ i.category_name }}</h5>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        {% endfor %}
+        
     </div>
 
 </body>
